--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http-server": "^0.11.1",
-    "phaser": "^3.15.1"
+    "http-server": "^0.11.1"
   }
 }
